<resources>
    <string name="app_name">BeerFest</string>
    <string name="title_params">Paramètres</string>
    <string name="title_blog">Blog</string>
    <string name="title_scan">Scan</string>
    <string name="title_brewery">Brasserie</string>
    <string name="title_beer">Bière</string>
    <string name="style">Style: </string>
    <string name="couleur">Couleur: </string>
    <string name="alcool">Alcool: </string>
    <string name="size">Taille: </string>
    <string name="ibu">IBU: </string>
    <string name="type">Type: </string>
    <string name="flavour">Saveurs: </string>
    <string name="not_far_away">Brasseries</string>
    <string name="next_events">Prochains événements</string>
    <string name="event_location">Emplacement: %1$s</string>
    <string name="informations">Informations</string>
    <string name="appreciation">Appréciation</string>
    <string name="hoppiness">Hoppiness</string>
    <string name="alcool_level">Niveau d\'alcool</string>
    <string name="done">Enregistrer</string>
    <string name="language_french">Français</string>
    <string name="language_german">Deutsch</string>
    <string name="other_langage_app">Quelle langue tu préfères?</string>
    <string name="no_brewery">Choisis une brasserie en scannant le QR code ou en la sélectionnant dans la liste</string>
    <string name="event_infos">Tu trouveras ici tous les événements à venir durant l\'événements, ainsi que l\'heure de leur déroulement et l\'emplacement où ils ont lieu.</string>
    <string name="rate_saved_successfully">Notes enregistrées !</string>
    <string name="left_handed">Activer le mode gaucher</string>
    <string name="rate">Noter</string>
    <string name="no_beer">Il n\'y a pas de bières référencées sur cette brasserie !</string>
</resources>
