<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.beer.BeerFragment">

    <ImageView
        android:id="@+id/beer_header_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_item_beer"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/beerGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rate_beer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_rate_button"
        android:padding="8dp"
        android:text="Noter"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/beer_header_image"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/beerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/beer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Beer"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beer_header_image" />

    <TextView
        android:id="@+id/beer_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/style"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/beer_name"
        app:layout_constraintTop_toBottomOf="@+id/beer_name" />

    <TextView
        android:id="@+id/beer_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/caracteristicsGuideline"
        app:layout_constraintStart_toStartOf="@+id/beer_color"
        app:layout_constraintTop_toTopOf="@+id/beer_label_style"
        tools:text="IPA" />

    <TextView
        android:id="@+id/beer_label_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/couleur"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/beer_name"
        app:layout_constraintTop_toBottomOf="@+id/beer_label_style" />

    <TextView
        android:id="@+id/beer_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toRightOf="@+id/beer_label_color"
        app:layout_constraintTop_toTopOf="@+id/beer_label_color"
        tools:text="Bleu" />

    <TextView
        android:id="@+id/beer_label_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcool"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/caracteristicsGuideline"
        app:layout_constraintTop_toTopOf="@+id/beer_style" />

    <TextView
        android:id="@+id/beer_alcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/caracteristicsGuideline"
        app:layout_constraintStart_toEndOf="@+id/beer_label_alc"
        app:layout_constraintTop_toTopOf="@+id/beer_label_alc"
        tools:text="6.4%" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/caracteristicsGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/beer_label_ibu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ibu"
        android:textColor="#000000"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/caracteristicsGuideline"
        app:layout_constraintTop_toBottomOf="@+id/beer_label_alc" />

    <TextView
        android:id="@+id/beer_ibu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/beer_alcool"
        app:layout_constraintTop_toTopOf="@+id/beer_label_ibu"
        tools:text="24" />


    <TextView
        android:id="@+id/beer_label_flavour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/flavour"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/beer_name"
        app:layout_constraintTop_toBottomOf="@+id/beer_label_color" />

    <TextView
        android:id="@+id/beer_flavours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Poivré, pimenté, acidulé"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/beer_color"
        app:layout_constraintTop_toBottomOf="@+id/beer_label_color" />

    <TextView
        android:id="@+id/beer_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beer_flavours"
        tools:text="A refreshing and creamy IPA, really juicy with exotic fruits taste of pineapple and mango" />


</androidx.constraintlayout.widget.ConstraintLayout>